=== NoNa ===
== Version 1.9.2 ==
Changelog: December 27, 2014
= Code =
* Additional minor code refactoring to better meet WordPress Coding Standards
* Added `nona_content_width` function to be used in "*_head" hooks

= CSS =
= Miscellaneous =

/** ------------------------------------------------------------------------- */
== Version 1.9.1 ==
Changelog: August 4, 2014
= Code =
* Minor code refactoring to better meet WordPress Coding Standards

= CSS =
* Added `post-title` class and styles to better handle long titles
* Improved aesthetics of Post Password form display
* Improved aesthetics of Search form display
* Made sure Twitter embeds are not fixed width
* Minor adjustment to child-menu item alignment (now left instead of centered)
* Updated `gallery-caption` class to better handle high quantity column displays
* Updated default Calendar widget styles

= Miscellaneous =
* Documentation clean up and updates
* Update copyright to 2014
* Update Tested Up To version to WordPress 4.0
* Update `screenshot.png` to 880x660 size

/** ------------------------------------------------------------------------- */
== Version 1.9 ==
Changelog: December 28, 2013
= Code =
* Code reformatted to better meet WordPress Coding Standards (see https://gist.github.com/Cais/8023722)
* Remove `nona_login` function - see BNS Login http://wordpress.org/extend/plugins/bns-login
* Removed the unused variable `$sep_location`

/** ------------------------------------------------------------------------- */
== Version 1.8.1 ==
Changelog: July 18, 2013
= Code =
* Added constant 'NONA_HOME_URL'
* Hide middle footer widget area frame if it is empty
* Refactored Featured Image display code into function `nona_show_featured_image( $size )`
* Used 'NONA_HOME_URL' where appropriate

= CSS =
* Added 'hidden' class
* Adjusted `img` and 'caption' related properties

/** ------------------------------------------------------------------------- */
== Version 1.8 ==
Changelog: March 15, 2013
= Code =